[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Enemies/Giant White Kurnas/Giant White Kurnas Drop.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Giant White Kurnas/Giant White Kurnas Walk.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Giant White Kurnas/Giant White Kurnas AttackLeft.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Overlap/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Enemies/Giant White Kurnas.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Overlap/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Overlap/PlayerDetectionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Songs/Enemies/Giant White Kurnas/04-AttackDrop-consolidated.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 26.1508
height = 62.8741

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 3.75
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
length = 8.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 7, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 80 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 5.6, 5.9, 6.6, 8.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5.95008, -36.7123 ), Vector2( -5.09419, -46.3133 ), Vector2( -5.27232, -46.1331 ), Vector2( -3.05976, -46.1658 ), Vector2( -4.25996, -26.7975 ), Vector2( -4.04746, -35.6656 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 6.4, 7.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node/ChargeAttack:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 6.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 19.107
height = 70.1507

[sub_resource type="CapsuleShape2D" id=6]
radius = 32.3944
height = 38.5675

[sub_resource type="CapsuleShape2D" id=7]
radius = 31.8473
height = 128.172

[sub_resource type="CapsuleShape2D" id=8]
radius = 110.428
height = 313.936

[node name="Giant White Kurnas" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 30

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )
offset = Vector2( 0, -27 )
hframes = 21
frame = 11

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
offset = Vector2( 0, -27 )
hframes = 81
frame = 68

[node name="Sprite3" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 3 )
offset = Vector2( 0, -27 )
hframes = 41
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -5.29413, -26.8577 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/Attack = SubResource( 2 )
anims/ChargeAttack = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -4.24668, -27.3518 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Hitbox" parent="." groups=[
"hitbox",
] instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 57.1594, -26.8296 )
rotation = 1.5708
shape = SubResource( 6 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -6.61555, -32.2261 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 8 )]
visible = false
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
visible = false
position = Vector2( -2.76627, -30.9553 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="Node" type="Node" parent="."]

[node name="ChargeAttack" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource( 9 )
[connection signal="attack" from="." to="Hitbox" method="_on_Giant_White_Kurnas_attack"]
[connection signal="stun" from="." to="Hitbox" method="_on_Giant_White_Kurnas_stun"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="attacked" from="Hurtbox" to="Stats" method="_on_Hurtbox_attacked"]
[connection signal="stunned" from="Hitbox" to="Hurtbox" method="_on_Hitbox_stunned"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="PlayerDetectionZone"]
